<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/movie_transition_name_card"
    android:layout_margin="@dimen/card_view_elevation"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/card_foreground"
    android:minHeight="150dp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_movie_pic"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:transitionName="@string/movie_transition_name_image"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_movie_chinese_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/common_gray_light"
                android:transitionName="@string/movie_transition_name_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_movie_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:textColor="@color/common_gray_lighter"
                android:transitionName="@string/movie_transition_name_genres"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tv_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_score_text"
                    android:layout_centerVertical="true"
                    android:textSize="14dp"/>
                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_red_dark"
                    android:layout_toRightOf="@id/tv_score_text"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:transitionName="@string/movie_transition_name_score"
                    android:textSize="14sp"/>

            </RelativeLayout>
            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/rb_score"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>