<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/movie_transition_name_card"
    android:layout_margin="@dimen/card_view_elevation"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/card_foreground"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_movie_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:maxLines="1"
            android:textColor="@color/common_text_color_normal"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_item_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/common_text_color_normal"
            android:textSize="14sp"
            android:transitionName="@string/movie_transition_name_text"/>

        <ImageView
            android:id="@+id/iv_item_movie_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_loader_empty"
            android:transitionName="@string/movie_transition_name_image"/>
    </LinearLayout>
</android.support.v7.widget.CardView>